# josh3d

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeUserPresetsExample.json  Camera.h  Input.h  LICENSE  README.md  Shader.h  ShaderProgram.h  Texture.h  TypeAliases.h  VAO.h  glResource.h  vcpkg.json
src/: BoxScene.hpp  CMakeLists.txt  CubemapScene.hpp  DemoScene.cpp  DemoScene.hpp  DirPointShadowScene.hpp  DirShadowScene.hpp  InstancingScene.hpp  ModelScene.hpp  PostprocessingScene.hpp  Scenes.cpp  Scenes.hpp  main.cpp
src/breakout/: Ball.hpp  CMakeLists.txt  Canvas.cpp  Canvas.hpp  Circle2D.hpp  Collisions.cpp  Collisions.hpp  FXState.hpp  Game.hpp  GameLevel.hpp  Matrix2D.hpp  Paddle.hpp  Particle2D.hpp  Particle2DGenerator.hpp  PowerUp.hpp  PowerUpGenerator.hpp  Rect2D.hpp  Sprite.hpp  SpriteRenderer.hpp  Tile.cpp  Tile.hpp  main.cpp
src/breakout/shaders/: pp_shake.frag  pp_shake.vert  sprite.frag  sprite.vert
src/breakout2/: CMakeLists.txt  Canvas.hpp  Events.hpp  FXStateManager.hpp  FXType.hpp  Game.cpp  Game.hpp  GameInit.cpp  GameLevel.hpp  GameProcessEvents.cpp  GameRender.cpp  GameRenderSystem.cpp  GameRenderSystem.hpp  GameUpdate.cpp  Levels.cpp  Levels.hpp  Matrix2D.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PowerUp.cpp  PowerUp.hpp  PowerUpGenerator.hpp  Rect2D.hpp  SpriteRenderSystem.hpp  Tile.hpp  Transform2D.hpp  VFXRenderer.cpp  VFXRenderer.hpp  main.cpp
src/breakout2/shaders/: pp_chaos.vert  pp_confuse.vert  pp_invert.frag  pp_kernel_blur.frag  pp_shake.vert
src/context/: CMakeLists.txt  GLFWInitTerminateWrapper.h  GLFWWindowWrapper.h  IContextWrapper.h
src/input/: CMakeLists.txt  Input.h
src/josh3d/: All.cpp  All.hpp  CMakeLists.txt  Globals.cpp  GlobalsData.hpp  GlobalsUtil.hpp
src/josh3d/core/: AggregateTimer.hpp  AsyncCradle.hpp  Belt.hpp  Common.hpp  FrameTimer.cpp  FrameTimer.hpp  HashedString.hpp  ID.hpp  OffscreenContext.cpp  OffscreenContext.hpp  Resource.hpp  RuntimeError.hpp  SystemKey.hpp  Time.hpp  UUID.cpp  UUID.hpp  WindowSizeCache.cpp  WindowSizeCache.hpp
src/josh3d/data/: CubemapData.hpp  ImageData.hpp  MeshData.cpp  MeshData.hpp  PixelData.hpp  ShaderSource.cpp  ShaderSource.hpp  ShaderSourceCTRE.cpp  TextureData.cpp  TextureData.hpp
src/josh3d/engine/: CascadeViewsBuilder.hpp  FrustumCuller.hpp  GlobalContext.cpp  GlobalContext.hpp  PerfAssembly.hpp  PerfHarness.hpp  Pipeline.hpp  PipelineStage.hpp  PostprocessRenderer.hpp  RenderComponents.hpp  RenderEngine.cpp  RenderEngine.hpp  RenderStage.hpp  Runtime.cpp  Runtime.hpp  StageContext.hpp  Systems.hpp
src/josh3d/filesystem/: Filesystem.hpp  VFSRoots.hpp  VPath.cpp  VPath.hpp  VirtualFilesystem.cpp  VirtualFilesystem.hpp  VirtualFilesystemError.hpp
src/josh3d/gl/: AndThen.hpp  AttributeParams.cpp  AttributeParams.hpp  DecayToRaw.hpp  GLAPI.hpp  GLAPIBinding.hpp  GLAPICommonTypes.hpp  GLAPICore.hpp  GLAPILimits.hpp  GLAPIQueries.hpp  GLAPITargets.hpp  GLAllocator.hpp  GLAttributeTraits.hpp  GLBuffers.hpp  GLDSAAllocator.hpp  GLDSABuffers.hpp  GLDSAFenceSync.hpp  GLDSAFramebuffer.hpp  GLDSAObjects.hpp  GLDSAProgram.hpp  GLDSAQueries.hpp  GLDSASampler.hpp  GLDSAShaderProgram.hpp  GLDSAShaders.hpp  GLDSATextures.hpp  GLDSAUnique.hpp  GLDSAVertexArrays.hpp  GLFenceSync.hpp  GLFramebuffer.hpp  GLFramebuffers.hpp  GLKind.hpp  GLKindHandles.hpp  GLMutability.hpp  GLObjectBase.hpp  GLObjectHandles.hpp  GLObjectHelpers.hpp  GLObjects.hpp  GLPixelPackTraits.hpp  GLProgram.hpp  GLQueries.hpp  (+17 more)
src/josh3d/globals/: GlobalsGL.hpp
src/josh3d/gltraits/: AttributeTraits.hpp  PixelPackTraits.hpp  UniformTraits.hpp
src/josh3d/imgui/: Fonts.cpp  Fonts.hpp  ImGuiApplicationAssembly.cpp  ImGuiApplicationAssembly.hpp  ImGuiAssetBrowser.cpp  ImGuiAssetBrowser.hpp  ImGuiComponentWidgets.hpp  ImGuiEngineHooks.cpp  (+26 more)
src/learnlib/: All.hpp  AssimpModelLoader.hpp  AsyncDataPool.hpp  Basis.h  Basis.hpp  BatchedShader.hpp  CMakeLists.txt  Camera.h  Camera.hpp  CubemapData.hpp  DataPool.hpp  DataPools.hpp  DepthRenderTarget.hpp  DrawableMesh.hpp  FrameTimer.hpp  GLObjectAllocators.hpp  GLObjectPool.hpp  GLObjectPools.hpp  GLObjects.cpp  GLObjects.hpp  Globals.cpp  Globals.hpp  GlobalsData.hpp  GlobalsGL.hpp  GlobalsUtil.hpp  ImGuiContextWrapper.hpp  Input.h  Input.hpp  LightCasters.hpp  Logging.h  Logging.hpp  MaterialDS.cpp  MaterialDS.hpp  MaterialTraits.hpp  Mesh.hpp  Model.hpp  PostprocessDoubleBuffer.hpp  PostprocessRenderer.hpp  PostprocessStage.hpp  RenderTargetColor.hpp  (+16 more)
src/old/: IResource.h  Shader.h  ShaderProgram.h  Texture.h  TypeAliases.h  VBO.h
src/resource/: CMakeLists.txt  GLObjectAllocators.hpp  GLObjectPools.hpp  GLObjects.cpp  GLObjects.hpp  IResource.h  Mesh.h  Mesh.hpp  Model.hpp  ResourceAllocators.h  Shader.h  ShaderProgram.h  ShaderSource.hpp  Texture.h  TextureData.hpp  VAO.h  VBO.h  Vertex.hpp  glResource.h  resource.cpp
src/shaders/: MultiLightObject.frag  TextureMaterialEmissionObject.frag  TextureMaterialObject.frag  TexturedObject.frag  basic_mesh_instanced.vert  camera.glsl  camera_ubo.glsl  csm_atested_mdi.frag  csm_atested_mdi.vert  csm_opaque_mdi.frag  csm_opaque_mdi.vert  csm_singlepass.frag  csm_singlepass.geom  csm_singlepass.vert  depth_cubemap.frag  depth_cubemap.geom  depth_cubemap.vert  depth_cubemap_array.geom  depth_map.frag  depth_map.vert  depth_map_cascade.frag  depth_map_cascade.geom  depth_map_cascade.vert  depth_map_multidraw.vert  dfr_geometry_dsn_batched.vert  dfr_geometry_mat_ds.frag  dfr_geometry_mat_ds.vert  dfr_geometry_mat_dsn.frag  dfr_geometry_mat_dsn.vert  dfr_geometry_skinned.frag  dfr_geometry_skinned.vert  dfr_geometry_terrain.frag  dfr_geometry_terrain.vert  dfr_shading.vert  dfr_shading_adpn_shadow.frag  dfr_shading_adpn_shadow_csm.frag  dfr_shading_ambi_ao_dir_csm.frag  dfr_shading_ambi_dir.frag  dfr_shading_csm_debug.frag  dfr_shading_point.vert  (+84 more)
src/types/: CMakeLists.txt  LightCasters.h
src/world/: Basis.h  CMakeLists.txt
tests/: CMakeLists.txt
tests/josh3d/: AsyncDataPool.tests.cpp  RingBuffer.tests.cpp  ShaderSource.tests.cpp  Transform.tests.cpp
tests/learnlib/: AsyncDataPool.tests.cpp
(+752 files in other folders)
